// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ColorPicker > renders correctly with class 1`] = `
<div>
  <div class="data-disabled:opacity-75 w-64" data-slot="root">
    <div class="flex gap-4" data-slot="picker">
      <div class="relative size-42 touch-none" data-slot="selector">
        <div class="absolute inset-0 rounded-md" data-slot="selectorBackground"></div>
        <div class="absolute inset-0 rounded-md" data-color-picker-selector data-slot="selectorBackground"></div>
        <div class="-translate-1/2 absolute cursor-pointer data-disabled:cursor-not-allowed ring-2 ring-white rounded-full size-4" data-slot="selectorThumb"></div>
      </div>
      <div class="h-42 relative rounded-md touch-none w-2" data-color-picker-track data-slot="track">
        <div class="-translate-1/2 absolute cursor-pointer data-disabled:cursor-not-allowed left-1/2 ring-2 ring-white rounded-full size-4" data-slot="trackThumb"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorPicker > renders correctly with disabled 1`] = `
<div>
  <div class="data-disabled:opacity-75" data-disabled="true" data-slot="root">
    <div class="flex gap-4" data-slot="picker">
      <div class="relative size-42 touch-none" data-slot="selector">
        <div class="absolute inset-0 rounded-md" data-slot="selectorBackground"></div>
        <div class="absolute inset-0 rounded-md" data-color-picker-selector data-slot="selectorBackground"></div>
        <div class="-translate-1/2 absolute cursor-pointer data-disabled:cursor-not-allowed ring-2 ring-white rounded-full size-4" data-disabled="true" data-slot="selectorThumb"></div>
      </div>
      <div class="h-42 relative rounded-md touch-none w-2" data-color-picker-track data-slot="track">
        <div class="-translate-1/2 absolute cursor-pointer data-disabled:cursor-not-allowed left-1/2 ring-2 ring-white rounded-full size-4" data-disabled="true" data-slot="trackThumb"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorPicker > renders correctly with size lg 1`] = `
<div>
  <div class="data-disabled:opacity-75" data-slot="root">
    <div class="flex gap-4" data-slot="picker">
      <div class="relative size-46 touch-none" data-slot="selector">
        <div class="absolute inset-0 rounded-md" data-slot="selectorBackground"></div>
        <div class="absolute inset-0 rounded-md" data-color-picker-selector data-slot="selectorBackground"></div>
        <div class="-translate-1/2 absolute cursor-pointer data-disabled:cursor-not-allowed ring-2 ring-white rounded-full size-4" data-slot="selectorThumb"></div>
      </div>
      <div class="h-46 relative rounded-md touch-none w-2" data-color-picker-track data-slot="track">
        <div class="-translate-1/2 absolute cursor-pointer data-disabled:cursor-not-allowed left-1/2 ring-2 ring-white rounded-full size-4" data-slot="trackThumb"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorPicker > renders correctly with size md 1`] = `
<div>
  <div class="data-disabled:opacity-75" data-slot="root">
    <div class="flex gap-4" data-slot="picker">
      <div class="relative size-42 touch-none" data-slot="selector">
        <div class="absolute inset-0 rounded-md" data-slot="selectorBackground"></div>
        <div class="absolute inset-0 rounded-md" data-color-picker-selector data-slot="selectorBackground"></div>
        <div class="-translate-1/2 absolute cursor-pointer data-disabled:cursor-not-allowed ring-2 ring-white rounded-full size-4" data-slot="selectorThumb"></div>
      </div>
      <div class="h-42 relative rounded-md touch-none w-2" data-color-picker-track data-slot="track">
        <div class="-translate-1/2 absolute cursor-pointer data-disabled:cursor-not-allowed left-1/2 ring-2 ring-white rounded-full size-4" data-slot="trackThumb"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorPicker > renders correctly with size sm 1`] = `
<div>
  <div class="data-disabled:opacity-75" data-slot="root">
    <div class="flex gap-4" data-slot="picker">
      <div class="relative size-38 touch-none" data-slot="selector">
        <div class="absolute inset-0 rounded-md" data-slot="selectorBackground"></div>
        <div class="absolute inset-0 rounded-md" data-color-picker-selector data-slot="selectorBackground"></div>
        <div class="-translate-1/2 absolute cursor-pointer data-disabled:cursor-not-allowed ring-2 ring-white rounded-full size-4" data-slot="selectorThumb"></div>
      </div>
      <div class="h-38 relative rounded-md touch-none w-2" data-color-picker-track data-slot="track">
        <div class="-translate-1/2 absolute cursor-pointer data-disabled:cursor-not-allowed left-1/2 ring-2 ring-white rounded-full size-4" data-slot="trackThumb"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorPicker > renders correctly with ui 1`] = `
<div>
  <div class="data-disabled:opacity-75" data-slot="root">
    <div class="flex gap-4" data-slot="picker">
      <div class="relative rounded-lg size-42 touch-none" data-slot="selector">
        <div class="absolute inset-0 rounded-md" data-slot="selectorBackground"></div>
        <div class="absolute inset-0 rounded-md" data-color-picker-selector data-slot="selectorBackground"></div>
        <div class="-translate-1/2 absolute cursor-pointer data-disabled:cursor-not-allowed ring-2 ring-white rounded-full size-4" data-slot="selectorThumb"></div>
      </div>
      <div class="h-42 relative rounded-md touch-none w-2" data-color-picker-track data-slot="track">
        <div class="-translate-1/2 absolute cursor-pointer data-disabled:cursor-not-allowed left-1/2 ring-2 ring-white rounded-full size-4" data-slot="trackThumb"></div>
      </div>
    </div>
  </div>
</div>
`;
